# SDwC

./: .dockerignore  .gitignore  CLAUDE.md  README.md
.sdwc/: CLAUDE_BASE.md  field_requirements.yaml  intake_template.yaml  output_contract.md
infra/: ingress.yaml
scripts/: clean.sh  deploy.sh  logs.sh  rebuild.sh  (+1 more)
sdwc-api/: Dockerfile  pyproject.toml
sdwc-api/scripts/: generate_field_requirements.py
sdwc-api/src/sdwc_api/: main.py
sdwc-api/src/sdwc_api/core/: config.py  error_handlers.py  logging.py
sdwc-api/src/sdwc_api/engine/: context.py  packager.py  postprocess.py  renderer.py  validator.py
sdwc-api/src/sdwc_api/exceptions/: __init__.py
sdwc-api/src/sdwc_api/middleware/: __init__.py  request_logging.py
sdwc-api/src/sdwc_api/routers/: health.py  intake.py
sdwc-api/src/sdwc_api/schemas/: __init__.py  enums.py  intake.py  phase1.py  phase2.py  phase3.py  phase4_architecture.py  phase4_services.py  phase5.py  phase6.py  phase7.py  phase8.py  responses.py
sdwc-api/src/sdwc_api/services/: yaml_parser.py
sdwc-api/tests/: conftest.py
sdwc-api/tests/integration/: test_health.py  test_intake.py
sdwc-api/tests/unit/: test_context.py  test_error_handlers.py  test_intake_model.py  test_logging_setup.py  test_packager.py  test_phase1_models.py  test_phase2_models.py  test_phase3_models.py  test_phase4_architecture_models.py  test_phase4_services_models.py  test_phase5_models.py  test_phase6_models.py  test_phase7_models.py  test_phase8_models.py  test_postprocess.py  test_renderer.py  test_request_logging.py  test_validator.py  test_yaml_parser.py
(+58 files in other folders)
